--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "json-server": "^1.0.0-beta.1",
     "mongoose": "^8.4.1",
     "multer": "^1.4.5-lts.1",
+    "openai": "^4.51.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
